--- a/i18n/de.toml
+++ b/i18n/de.toml
@@ -8,12 +8,6 @@ other = "Beiträge"
 [toc_heading]
 other = "Inhaltsverzeichnis"
 
-[tags]
-other = "Stichworte"
-
-[categories]
-other = "Kategorien"
-
 [at]
 other = "bei"
 
@@ -39,7 +33,7 @@ other = "Mit dem Newsletter auf dem neuesten Stand bleiben"
 other = "E-Mail Adresse eingeben"
 
 [newsletter_warning]
-other = "Mit der Eingabe Ihrer E-Mail-Adresse erklären Sie sich damit einverstanden, den Newsletter dieser Website zu erhalten."
+other = "Wir geben deine E-Mail Adresse nicht an Dritte weiter."
 
 [submit]
 other = "Absenden"
