--- a/i18n/hi.toml
+++ b/i18n/hi.toml
@@ -8,12 +8,6 @@ other = "पोस्ट"
 [toc_heading]
 other = "विषयसूची"
 
-[tags]
-other = "टैग"
-
-[categories]
-other = "श्रेणियाँ"
-
 [at]
 other = "अन्य"
 
@@ -39,7 +33,7 @@ other = "ईमेल अधिसूचना से अवगत रहें"
 other = "ईमेल दर्ज करें"
 
 [newsletter_warning]
-other = "अपना ईमेल पता दर्ज करके, आप इस वेबसाइट का न्यूज़लेटर प्राप्त करने के लिए सहमत होते हैं।"
+other = "हम आपके ईमेल को कभी भी किसी और के साथ साझा नहीं करेंगे"
 
 [submit]
 other = "जमा करें"
