--- a/i18n/it.toml
+++ b/i18n/it.toml
@@ -8,12 +8,6 @@ other = "Post"
 [toc_heading]
 other = "Contenuti"
 
-[tags]
-other = "Tags"
-
-[categories]
-other = "Categorie"
-
 [at]
 other = "presso"
 
@@ -39,7 +33,7 @@ other = "Resta aggiornato con la notifica di email"
 other = "Inserisci l'email"
 
 [newsletter_warning]
-other = "Inserendo il tuo indirizzo email, accetti di ricevere la newsletter di questo sito."
+other = "Non condivideremo l'email con altri."
 
 [submit]
 other = "Invia"
